--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -134,6 +134,8 @@ body {
   padding: 13px;
   margin-bottom: 10px;
   border: 1px solid #cccccc;
+  background-color: #f2f2f2;
+  color: #f7af31;
 }
 
 .form-container button {
