--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -136,6 +136,7 @@ body {
   border: 1px solid #cccccc;
   background-color: #f2f2f2;
   color: #f7af31;
+  border-radius: 5px;
 }
 
 .form-container button {
