--- a/Assets/Style/style.css
+++ b/Assets/Style/style.css
@@ -6,7 +6,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #faeacd;
+  background-color: #fae7c5;
 }
 
 .popup {
